# book-review-api

./: .gitignore  Dockerfile  README.md  alembic.ini  compose.yml  database.py  docker-compose.yml  error_handlers.py  main.py  models.py  pyproject.toml  requirements.txt  ruff.toml  run.py  schema.db  script.sql  security.py  seed.py  teste.sql
app/: app.db  main.py
app/controllers/: user_controller.py
app/database/: connection.py
app/models/: user.py
app/routes/: user_routes.py
app/schemas/: user_schema.py
app/server/: run_server.py
app/services/: user_service.py
database/: database.py  error_schemas.py  schemas.py
migrations/: env.py
migrations/versions/: 001_create_users_and_books.py  002_create_reviews.py  003_create_tags.py
models/: __init__.py  disciplina.py  estudante.py  matricula.py  perfil.py  professor.py
routes/: auth.py  disciplinas.py  estudantes.py  matriculas.py  professores.py
src/: __init__.py  config.py  main.py  pyproject.toml  run.py  schema.db
src/controllers/: __init__.py  auth_controller.py  book_controller.py  review_controller.py  tag_controller.py  user_controller.py  users.py
src/core/: __init__.py  config.py  database.py  dependencies.py  exception_handlers.py  exceptions.py  middleware.py  redis.py
src/core/mail/: __init__.py  mail_config.py  mail_service.py
src/core/repositories/: book_repository.py  review_repository.py  tag_repository.py  user_repository.py
src/core/security/: jwt.py  password.py  permissions.py
src/core/services/: auth_service.py  book_service.py  review_service.py  tag_service.py  (+1 more)
src/db/: connection.py
src/models/: __init__.py  book.py  book_model.py  book_tag_model.py  review_model.py  tag_model.py  user.py  user_model.py
src/repos/: users.py
src/routes/: user_routes.py
src/schemas/: user.py
src/services/: user_service.py  users.py
src/views/: __init__.py  auth_view.py  book_view.py  review_view.py  tag_view.py  user_view.py  users_view.py
tests/: __init__.py  conftest.py  test_auth.py  test_books.py  test_health.py  test_reviews.py  test_tags.py
(+6 files in other folders)
