[project]
name = "erp-api"
version = "0.1.0"
description = "FastAPI project"
authors = [
    {name = "dgusfr",email = "diegogustavo.fr@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.136.3,<0.137.0)",
    "uvicorn[standard] (>=0.48.0,<0.49.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "databases (>=0.9.0,<0.10.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "sqlmodel (>=0.0.38,<0.0.39)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "redis (>=8.0.0,<9.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "fastapi-mail (>=1.6.4,<2.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "asgiref (>=3.11.1,<4.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "ruff (>=0.15.15,<0.16.0)",
    "isort (>=8.0.1,<9.0.0)"
]
